1.1.2 FIX: Theme problems, making everything unreadable

--- a/css/cage.css
+++ b/css/cage.css
@@ -187,11 +187,14 @@
 }
 #cageAllGenerals > div > img:last-of-type {
 	position: relative;
-	margin-left: -10px;
-	left: -3px;
-	bottom: 3px;
+	margin-left: -16px;
 	width: 10px;
 	cursor: pointer;
+	background-color: black;
+	padding: 3px;
+	border-top-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	opacity: 0.7;
 }
 #cageFavouriteGenerals {
 	padding: 4px 0 2px;
@@ -216,10 +219,14 @@
 }
 #cageFavouriteGenerals > div > img:last-of-type {
 	position: relative;
-	margin-left: -12px;
-	bottom: 3px;
-	width: 12px;
+	margin-left: -16px;
+	width: 10px;
 	cursor: pointer;
+	background-color: black;
+	padding: 3px;
+	border-top-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	opacity: 0.7;
 }
 .cageCharge {
 	position: relative;
